--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,20 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title>
-      Blank
+      MOVIE
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-item routerLink="/the-conjuring">
+    <ion-thumbnail slot="start" >
+      <img alt="cartaz" src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/o94LZsIKt0priAca7hoN4yz7a1d.jpg" />
+    </ion-thumbnail>
+    <ion-label>The Conjuring</ion-label>
+
+  </ion-item>
+
+
 </ion-content>
