--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,12 @@
 #container a {
   text-decoration: none;
 }
+
+ion-thumbnail{
+  width: 150px;
+  height: 100%;
+}
+
+ion-toolbar{
+  font-size: larger;
+}
